bk_ida/gccida/c0/aggregate_value_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/aggregate_value_p/src/function.c:4799:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/aggregate_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/aggregate_value_p/src/function.c:4800:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[( unsigned __int8)HIBYTE( WORD2( type->block.abstract_origin)) >> 1] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/aggregate_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/aggregate_value_p/src/obj/function.o] Error 1
